--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <input class="form-inputs" type="radio" id="rating5" name="rating" value="5" >
             <label for="rating5" class="opt">5</label>
           </fieldset>
-          <button class="submit-button" id="flipButton">Submit</button>
+          <button class="submit-button" id="flipButton" disabled>Submit</button>
         </form>        
     </section>
     <!-- Rating state end -->
